# plustwo-backend

./: Cargo.toml
.github/workflows/: deploy-image.yml
apps/plustwo-archiver/: Cargo.toml
apps/plustwo-archiver/src/: main.rs
apps/plustwo-watcher/: Cargo.toml  Dockerfile
apps/plustwo-watcher/src/: broadcaster.rs  main.rs  socket.rs  state.rs  twitch.rs
crates/plustwo-database/: Cargo.toml
crates/plustwo-database/migration/src/: lib.rs  m20250313_000001_create_broadcasters_table.rs  m20250313_000002_create_broadcasts_table.rs  m20250313_000003_create_chatters_table.rs  m20250313_000004_create_message_kind_type.rs  m20250313_000005_create_messages_table.rs
crates/plustwo-database/src/: lib.rs
crates/plustwo-database/src/entities/: broadcasters.rs  broadcasts.rs  chatters.rs  messages.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
crates/plustwo-twitch-gql/: Cargo.toml
crates/plustwo-twitch-gql/src/: lib.rs
crates/plustwo-twitch-gql/src/shared/: mod.rs  video.rs
