[package]
name = "plustwo-archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
plustwo-database = { path = "../../crates/plustwo-database" }
plustwo-twitch-gql = { path = "../../crates/plustwo-twitch-gql" }

eyre = "0.6.12"
tokio = { version = "1.44.1", features = ["full"] }
chrono = "0.4.40"

indicatif = "0.17.11"

[lints]
workspace = true
